fixed hovered effects on smaller screens, changed image padding for smaller screens

--- a/styles/index.css
+++ b/styles/index.css
@@ -77,6 +77,12 @@
     /* box-shadow: 0 0 12px 4px #ebe6e944; */
 }
 
+@media (max-width: 550px) { 
+    .reason-row:hover {
+        background-color: #ffffff00;
+    }
+}
+
 .icon-container {
     display: flex;
     align-items: center;
@@ -120,6 +126,12 @@
     aspect-ratio: 1 / 1;
     transition: transform 0.3s ease-in-out;
 }
+
+/* @media (max-width: 550px) { 
+    .gallery-item img {
+        width: 90%;
+    }
+} */
 
 .gallery-item:hover img {
     transform: scale(1.1);
